style/gui.css
/* ... */
#correction-table .possibilities li, .qcmt li {
   list-style:none;
}

.qinst .possibilities, .qcmt ul {
   margin:0;
   padding:0;
}

.qinst .possibilities li {
   margin-left:1ex
}

#correction-table th {
   background:#F5F5F5;
   text-align:center;
   font-size:x-small;
}

.qstate {
   text-align:center !important
}

.qid {
   color:#07C;
   float:left;
   font-size:bold
}

#svg-container {
   z-index:100;
}

#welcome {
   z-index:0;
   line-height:1.7em;
   background:white;
   position: absolute;
   font-size:large;
   color: black;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   overflow:auto;
   padding:1em;
}
#welcome>:last-child {
   padding-bottom:6em;
}

#welcome p, #welcome ul {
   max-width:110ex;
}

#welcome li {
    margin-left:0;
    padding-left:1ex;
    list-style:none;
}

#welcome li:before {
    position:relative;
    left:-1ex;
    content:"✓";
    color:#A50
}


#welcome h2 {
   color:black;
   font-size:36pt;
   color: #05A;
   margin-top:0;
   padding-top:1rem;
   padding-bottom:1rem;
   text-align:center;
   font-weight:normal
}

#welcome h3 {
   font-weight:normal;
   font-size:22pt;
   color:#3A3
}

#word-layer1, #word-layer2 {
   position:absolute;
   top:0;
   left:0;
   right:0;
   display:inline-block;
   z-index:10;
}

#word-layer2 {
   opacity:0.4;
   z-index:0;
}

#automata-list-chooser {
   position:absolute;
   top:0;
   right:0;
   bottom:0;
   z-index:1000;
   background:#EFFAFF;
   max-width:40ex;
   box-shadow: -1px 0 1px #DDD;
}

#automata-list-chooser-close {
   position:absolute;
   top:0;
   right:1ex;
   font-size:small;
   text-decoration:none;
   color:red
}

#automata-list-chooser svg {
   max-width:2rem;
   max-height:2rem;
}

#automata-list-chooser-content {
   list-style:none;
   padding:0;
   margin:1ex 1px;
   border:1px solid #DDD;
   background:white;
}

#automata-list-chooser-content li {
   padding:0.3ex;
   margin:0;
}
#automata-list-chooser-content li span, #automata-list-chooser-content li svg {
   display:inline-block;
   vertical-align:middle;
}

#automata-list-chooser-content li:hover {
   background:#DEF
}

#automata-list-chooser-content a {
   text-decoration:none;
   display:block;
   color:gray
}

#automata-list-chooser p {
   text-align:justify;
   text-indent:2ex;
   font-size:small;
   color:gray;
   font-style:italic;
   margin:1.5rem 1ex 0 0;
}

.automaton-number {
   color:#0A5;
   font-weight:bold;
   text-align:right;
   padding:0 0.5ex;
   float:right;
   min-width:3ex;
   right:0
}

#pane-distantfile a {
   text-decoration:none;
   color:gray
}

#loaddistantfile p {
   margin-bottom:0;
   padding-bottom:0;
}


#pane-distantfile, #pane-localfile {
   padding:1ex
}

#pane-localfile {
   float:right
}

#pane-localfile button {
   margin-left:1em
}

#loaddistantfile .title {
   color:#444;
   font-size:1.2em;
   margin-top:3px;
   padding-top:0;
   font-weight:bold
}

#pane-distantfile {
   float:left
}

p img {
  vertical-align:middle
}

.automata-designer-resize-handle-rect {
   stroke:#A40;
   stroke-dasharray:5,5;
   fill:none
}

.automata-designer-resize-handle {
   stroke:#A40;
   fill:#F50
}

.automata-designer-overlay {
   border-radius:4px;
   position:absolute;
   background:#333;
   -webkit-box-shadow:0 0 3px black;
   box-shadow:0 0 3px black;
   margin:0;
   list-style:none;
   padding:0;
   transition-duration:200ms;
   transition-property:opacity, color;
   overflow:hidden;
   opacity:0.5
}

.automata-designer-overlay:hover {
   opacity:1
}

.automata-designer-overlay li {
   transition:200ms;
   color:white;
}

.automata-designer-overlay li:hover {
   background:white;
   color:black;
}

.automata-designer-overlay a {
   text-decoration:none;
   padding:0.5ex;
   font-size:small;
   color:inherit;
   display:block;
}


#new-state-btn-wrap {
    background-color: rgba(255,255,255,0.8);
    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.8) 10%, rgba(255,255,255,1));
    height:13ex;
    position:absolute;
    z-index:1000;
    bottom:0;
    left:0;
    right:20px;
}

#new-state-btn-wrap.welcome-hidden {
    position:static;
    background:transparent
}

#new-state-btn {
   position:absolute;
   bottom:5px;
   left:5px;
   border:1px solid #BB8;
   color:#883;
   font-size:small;
   background:#FFC;
   border-radius:10000px;
   opacity:0.7;
   padding:1ex;
   min-height:13ex;
   display:inline-block;
   vertical-align:middle;
   line-height:13ex;
   text-align:center;
   min-width:13ex;
   transition:200ms;
   cursor:pointer;
}

#new-state-btn-wrap:not(.welcome-hidden) #new-state-btn, #new-state-btn:hover {
   opacity:1
}

#new-state-btn.mouse-down {
   opacity:1;
   background:orange
}

.prompt-container {
   display:-webkit-flex;
   display:flex;
   align-items:center;
   padding:2px
}

.prompt-input {
   -webkit-flex:1;
   flex:1;
   width:100%;
   border-right:none;
   margin-right:0 !important;
}

.prompt-btn {
   margin-left:0 !important;
}

input[type=text], input[type=password] {
   border-radius:none;
   box-sizing:border-box;
   min-height:1.5rem;
   outline:none;
   margin:1px;
   border:1px solid silver;
}

input[type=text]:focus, input[type=password]:focus {
   border:1px solid #5CF;
   box-shadow:0 0 1px #5CF
}

input[type=button], button, select {
   margin:1px;
   border-radius:0;
   min-height:1.5rem;
   border:1px solid silver;
   background:white;
   color:black;
}

input[type=button]:active, button:active {
   background:#D5D5D5
}

.libD_notify-descr svg {
    max-width:100%
}

.libD_notify {
    overflow:hidden;
    max-height:75%
}

#menu {
    z-index:3000;
    position:absolute;
    right:0;
    background:white;
    box-shadow:0 0 2px black;
    color:black;
    margin-top:5px;
    margin-right:5px;
    display:flex;
    flex-direction:column;
    text-align:left;
}

#menu button {
    background:inherit;
    border:0;
    color:inherit;
    box-shadow: none;
    text-align:left;
}

#menu button img {
    margin-right:3px;
}
/* ... */

